--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
@@ -1,8 +1,75 @@
 <div class="body">
   <div class="nine">
     <h1>
-      דוח מטופלים <span>סה"כ תוצאות: {{ totalResults }}</span>
+      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
     </h1>
+  </div>
+
+  <div class="filter-card">
+    <form [formGroup]="filterForm" dir="rtl" class="filter-form">
+      <div class="container-fluid mb-2">
+        <div class="row search-count">
+          <div class="col">
+            <div dir="rtl" class="card">
+              <div dir="rtl" class="card-body">
+                <div class="filter-container">
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם התרופה</mat-label>
+                    <input type="text" matInput [formControl]="basicNamesControl" [matAutocomplete]="autoBasic">
+                    <mat-autocomplete #autoBasic="matAutocomplete" [displayWith]="displayBasicName">
+                      <mat-option *ngFor="let option of filteredBasicNameOptions | async" [value]="option">
+                        {{ option }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם קטגוריה</mat-label>
+                    <input matInput [formControlName]="'Category_Name'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם יחידת ביצוע</mat-label>
+                    <mat-select formControlName="Execution_UnitNames" multiple>
+                      <mat-select-header>
+                        <input matInput placeholder="חפש..." [(ngModel)]="unitNameFilter" (ngModelChange)="filterUnitNames()" [ngModelOptions]="{standalone: true}" />
+                      </mat-select-header>
+                      <mat-option *ngFor="let option of filteredUnitNameOptions" [value]="option">
+                        {{ option }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  
+                  
+                  
+                  
+                  
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם גנרי</mat-label>
+                    <input type="text" matInput [formControl]="genericNamesControl" [matAutocomplete]="autoGeneric">
+                    <mat-autocomplete #autoGeneric="matAutocomplete" [displayWith]="displayGenericName">
+                      <mat-option *ngFor="let option of filteredGenericNameOptions | async" [value]="option">
+                        {{ option }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך התחלה</mat-label>
+                    <input matInput [formControlName]="'StartDate'" [matDatepicker]="startDatePicker" />
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך סיום</mat-label>
+                    <input matInput [formControlName]="'EndDate'" [matDatepicker]="endDatePicker" />
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 
   <div class="button-card">
@@ -30,75 +97,57 @@
     הדוח נוצר על ידי משה ממן
   </div>
 
-  <mat-table [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
-    <ng-container matColumnDef="FirstName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>שם פרטי</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.FirstName }} </mat-cell>
+  <mat-table *ngIf="!showGraph && !loading" [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
+    <ng-container matColumnDef="Basic_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם תרופה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Basic_Name }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="LastName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>שם משפחה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.LastName }} </mat-cell>
+    <ng-container matColumnDef="Drug">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>קוד התרופה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Drug }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="IdNum">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>תעודת זהות</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.IdNum }} </mat-cell>
+    <ng-container matColumnDef="Execution_Date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך ביצוע</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Execution_Date | date: 'dd-MM-yyyy' }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="AdmissionNo">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AdmissionNo }} </mat-cell>
+    <ng-container matColumnDef="Category_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> קטגוריה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Category_Name }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="MedicalRecord">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>תיק רפואי</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.MedicalRecord }} </mat-cell>
+    <ng-container matColumnDef="Execution_UnitName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם יחידת ביצוע</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Execution_UnitName }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="EntryDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך כניסה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.EntryDate | date: 'dd/MM/yyyy' }} </mat-cell>
+    <ng-container matColumnDef="Generic_Name_ForDisplay">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם גנרי</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Generic_Name_ForDisplay }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="ResultComboText">
-      <mat-header-cell *matHeaderCellDef>תיאור תוצאה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.ResultComboText }} </mat-cell>
+    <ng-container matColumnDef="Dosage_InOrder">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>מינון </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Dosage_InOrder }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="SystemUnitName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>שם יחידה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.SystemUnitName }} </mat-cell>
+    <ng-container matColumnDef="Dosage_Unit_InOrder">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>יחידת מינון </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Dosage_Unit_InOrder }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="AdmissionDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך אשפוז</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AdmissionDate | date: 'dd/MM/yyyy' }} </mat-cell>
+    <ng-container matColumnDef="Way_Of_Giving">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>דרך מתן</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Way_Of_Giving }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="HospitalizationStatus">
-      <mat-header-cell *matHeaderCellDef>סטטוס אשפוז</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.HospitalizationStatus }} </mat-cell>
+    <ng-container matColumnDef="Id_Num">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> תעודת זהות</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Id_Num }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="DiagnosisFound">
-      <mat-header-cell *matHeaderCellDef>אבחנה נמצאה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.DiagnosisFound }} </mat-cell>
+    <ng-container matColumnDef="Full_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם מלא</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Full_Name }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="DescriptionMatchFound">
-      <mat-header-cell *matHeaderCellDef>התאמת תיאור נמצאה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.DescriptionMatchFound }} </mat-cell>
+    <ng-container matColumnDef="Depart_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה סיעודית </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Depart_Name }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="PatientDied">
-      <mat-header-cell *matHeaderCellDef>מטופל נפטר</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.PatientDied }} </mat-cell>
-    </ng-container>
-
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
-
   <mat-paginator [length]="totalResults" [pageSize]="10" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
 </div>
