--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -260,7 +260,7 @@
   </mat-tab>
   
 
-  <mat-tab label="סיכום שנתי">
+  <!-- <mat-tab label="סיכום שנתי">
     <img src="../../assets/excel.png" alt="Download" (click)="exportYearly()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
   
     <mat-card class="yearly-table-card" dir="rtl">
@@ -331,9 +331,9 @@
         </mat-paginator>
       </div>
     </mat-card>
-  </mat-tab>
+  </mat-tab> -->
   
-  <mat-tab label="סיכום חודשי לפי מדד">
+  <!-- <mat-tab label="סיכום חודשי לפי מדד">
     <img src="../../assets/excel.png" alt="Download" (click)="exportMonthly()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
 
     <mat-card class="monthly-table-card" dir="rtl">
@@ -367,9 +367,120 @@
         </mat-paginator>
       </div>
     </mat-card>
+  </mat-tab> -->
+
+  <mat-tab label="סיכום תקופתי ">
+    <mat-card class="filter-card" style="margin-bottom: 16px;" dir="rtl">
+      <mat-radio-group [(ngModel)]="selectedPivot" (change)="assignTableConfig()">
+        <mat-radio-button value="yearly">שנתי</mat-radio-button>
+        <mat-radio-button value="quarterly">רבעוני</mat-radio-button>
+        <mat-radio-button value="monthly">חודשי</mat-radio-button>
+      </mat-radio-group>
+  
+      <img src="../../assets/excel.png"
+           alt="Download"
+           (click)="exportSelectedPivot()"
+           class="download-icon icon"
+           width="50px"
+           style="margin-right: 16px;" />
+    </mat-card>
+  
+    <!-- ✅ Yearly Table -->
+    <div [hidden]="selectedPivot !== 'yearly'">
+      <mat-card class="yearly-table-card" dir="rtl">
+        <mat-card-title>דוח שנתי לפי מדד</mat-card-title>
+        <div class="mat-elevation-z4">
+          <table mat-table [dataSource]="yearlyDataSource" class="mat-table" matSort #yearlySort="matSort">
+            <ng-container *ngFor="let col of yearlyDisplayedColumns" [matColumnDef]="col">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else percentageCellY">
+                  {{ element[col] }}
+                </ng-container>
+                <ng-template #percentageCellY>
+                  <span [ngClass]="getCellClass(element[col], element['קוד מדד'])">
+                    {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-0') + '%' : '' }}
+                  </span>
+                </ng-template>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="yearlyDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: yearlyDisplayedColumns;"></tr>
+          </table>
+  
+          <mat-paginator #yearlyPaginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-card>
+    </div>
+  
+    <!-- ✅ Quarterly Table -->
+    <div [hidden]="selectedPivot !== 'quarterly'">
+      <mat-card class="quarterly-table-card" dir="rtl">
+        <mat-card-title>דוח רבעוני לפי מדד</mat-card-title>
+        <div class="mat-elevation-z4">
+          <table mat-table [dataSource]="quarterlyDataSource" class="mat-table" matSort #quarterlySort="matSort">
+            <ng-container *ngFor="let col of quarterlyDisplayedColumns" [matColumnDef]="col">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else percentageCellQ">
+                  {{ element[col] }}
+                </ng-container>
+                <ng-template #percentageCellQ>
+                  <span [ngClass]="getCellClass(element[col], element['קוד מדד'])">
+                    {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-0') + '%' : '' }}
+                  </span>
+                </ng-template>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="quarterlyDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: quarterlyDisplayedColumns;"></tr>
+          </table>
+  
+          <mat-paginator #quarterlyPaginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-card>
+    </div>
+  
+    <!-- ✅ Monthly Table -->
+    <div [hidden]="selectedPivot !== 'monthly'">
+      <mat-card class="monthly-table-card" dir="rtl">
+        <mat-card-title>דוח חודשי לפי מדד</mat-card-title>
+        <div class="mat-elevation-z4">
+          <table mat-table [dataSource]="monthlyDataSource" class="mat-table" matSort #monthlySort="matSort">
+            <ng-container *ngFor="let col of monthlyDisplayedColumns" [matColumnDef]="col">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else percentageCellM">
+                  {{ element[col] }}
+                </ng-container>
+                <ng-template #percentageCellM>
+                  <span [ngClass]="getCellClass(element[col], element['קוד מדד'])">
+                    {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-0') + '%' : '' }}
+                  </span>
+                </ng-template>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="monthlyDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: monthlyDisplayedColumns;"></tr>
+          </table>
+  
+          <mat-paginator #monthlyPaginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+        </div>
+      </mat-card>
+    </div>
   </mat-tab>
-
-
+  
+  
+  
   <!-- ❌ סיכום תקלות במדדים -->
 <mat-tab label="לא עמדו במדד">
   <div class="filter-export-row" style="display: flex; align-items: center; gap: 16px; margin: 10px 0;">
