--- a/src/app/chameleon-reports/main-surgery/main-surgery.component.html
+++ b/src/app/chameleon-reports/main-surgery/main-surgery.component.html
@@ -4,19 +4,12 @@
   titleText="מערכת יעל"
   subText="מכין את הדף עבורך…"
   [backgroundImageUrl]="'assets/back1.jpg'"
-
   (done)="onSplashDone()">
 </app-welcome-splash>
-
-
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 <div class="body">
-
-
-
-
   <!-- Filters -->
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
     <div class="container-fluid mb-2">
@@ -25,7 +18,7 @@
           <div dir="rtl" class="card">
             <div dir="rtl" class="card-body">
 
-              <!-- Date range row (SurgeryDate) -->
+              <!-- Date range row (surgeryDate) -->
               <div class="filter-row">
                 <mat-form-field class="filter-field">
                   <mat-label class="filters">מתאריך ניתוח</mat-label>
@@ -40,16 +33,15 @@
                   <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
                   <mat-datepicker #pickerTo></mat-datepicker>
                 </mat-form-field>
-                <mat-form-field class="filter-field department-field">
-                    <mat-label class="filters">מחלקה</mat-label>
-                    <mat-select formControlName="DepartmentFilter" multiple>
-                      <mat-option *ngFor="let dep of departmentOptions" [value]="dep">
-                        {{ dep }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                  
 
+                <mat-form-field class="filter-field department-field">
+                  <mat-label class="filters">מחלקה</mat-label>
+                  <mat-select formControlName="DepartmentFilter" multiple>
+                    <mat-option *ngFor="let dep of departmentOptions" [value]="dep">
+                      {{ dep }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
 
                 <div class="spacer"></div>
 
@@ -60,8 +52,6 @@
                 </div>
               </div>
 
-            
-
             </div>
           </div>
         </div>
@@ -69,66 +59,51 @@
     </div>
 
     <!-- Global search + actions -->
-    <div
-    dir="rtl"
-    style="display: flex; justify-content: space-between; align-items: center"
-  >
-    <mat-form-field
-      class="long-search-bar"
-      style="flex: 1; padding-right: 10px"
-    >
-      <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
-      <input
-        matInput
-        [formControlName]="'globalFilter'"
-        class="search-input"
-      />
-    </mat-form-field>
-  
-    <div class="graph-button-container">
-      <img
-        (click)="navigateToGraphPage()"
-        matTooltip="Move To Graph"
-        src="../../../../assets/graphIcon.png"
-        width="50px"
-      />
-    </div>
-  
-    <div class="icon" matTooltip="Download Excel">
-      <img
-        src="../../assets/excel.png"
-        alt="Download"
-        (click)="exportToExcel()"
-        class="download-icon"
-        width="50px"
-      />
-    </div>
-  
-    <!-- כפתור תעריפון משרד הבריאות -->
-    <button
-      mat-raised-button
-      color="accent"
-      style="margin-right: 10px"
-      (click)="openMOHPriceList()"
-      matTooltip="פתח קישור תעריפון משרד הבריאות"
-    >
-      תעריפון משרד הבריאות
-    </button>
-  
-    <!-- כפתור טבלת שיוך ICD9 -->
-    <button
-      mat-raised-button
-      color="primary"
-      style="margin-right: 10px"
-      (click)="openICD9Mapping()"
-      matTooltip="פתח טבלת שיוך קודי ICD9 וקודי שירות"
-    >
-      טבלת שיוך ICD9
-    </button>
-  </div>
-  
-  
+    <div dir="rtl" style="display: flex; justify-content: space-between; align-items: center">
+      <mat-form-field class="long-search-bar" style="flex: 1; padding-right: 10px">
+        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
+        <input matInput [formControlName]="'globalFilter'" class="search-input" />
+      </mat-form-field>
 
+      <div class="graph-button-container">
+        <img
+          (click)="navigateToGraphPage()"
+          matTooltip="Move To Graph"
+          src="../../../../assets/graphIcon.png"
+          width="50px"
+        />
+      </div>
+
+      <div class="icon" matTooltip="Download Excel">
+        <img
+          src="../../assets/excel.png"
+          alt="Download"
+          (click)="exportToExcel()"
+          class="download-icon"
+          width="50px"
+        />
+      </div>
+
+      <!-- כפתור תעריפון משרד הבריאות -->
+      <button
+        mat-raised-button
+        color="accent"
+        style="margin-right: 10px"
+        (click)="openMOHPriceList()"
+        matTooltip="פתח קישור תעריפון משרד הבריאות">
+        תעריפון משרד הבריאות
+      </button>
+
+      <!-- כפתור טבלת שיוך ICD9 -->
+      <button
+        mat-raised-button
+        color="primary"
+        style="margin-right: 10px"
+        (click)="openICD9Mapping()"
+        matTooltip="פתח טבלת שיוך קודי ICD9 וקודי שירות">
+        טבלת שיוך ICD9
+      </button>
+    </div>
   </form>
 
   <app-sys-graph *ngIf="showGraph" [graphData]="graphData"></app-sys-graph>
@@ -139,124 +114,154 @@
              matSort
              dir="rtl"
              class="mat-elevation-z8">
-  
-    <!-- CaseNumber -->
-    <ng-container matColumnDef="CaseNumber">
+
+    <!-- caseNumber -->
+    <ng-container matColumnDef="caseNumber">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('CaseNumber') }}
+        {{ getColumnLabel('caseNumber') }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        {{ element.CaseNumber }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- PatientName -->
-    <ng-container matColumnDef="PatientName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('PatientName') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.PatientName }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- SurgeryDate -->
-    <ng-container matColumnDef="SurgeryDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('SurgeryDate') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.SurgeryDate | date: 'yyyy-MM-dd' }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- Keren -->
-    <!-- <ng-container matColumnDef="Keren">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('Keren') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.Keren }}
-      </mat-cell>
-    </ng-container> -->
-  
-    <!-- DRG -->
-    <ng-container matColumnDef="DRG">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('DRG') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.DRG }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- SURGERY_NAME -->
-    <ng-container matColumnDef="SURGERY_NAME">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('SURGERY_NAME') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.SURGERY_NAME }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- Department -->
-    <ng-container matColumnDef="Department">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('Department') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.Department }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- ICD9 -->
-    <ng-container matColumnDef="ICD9">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('ICD9') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.ICD9 }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- SurgeryRunk -->
-    <ng-container matColumnDef="SurgeryRunk">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('SurgeryRunk') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.SurgeryRunk }}
-      </mat-cell>
-    </ng-container>
-  
-    <!-- DiagCode -->
-    <ng-container matColumnDef="DiagCode">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('DiagCode') }}
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.DiagCode }}
+        {{ element.caseNumber }}
       </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="SecretaryDRG">
+    <!-- patientName -->
+    <ng-container matColumnDef="patientName">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('SecretaryDRG') }}
+        {{ getColumnLabel('patientName') }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        {{ element.SecretaryDRG }}
+        {{ element.patientName }}
       </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="SurgeryCodeList">
+
+    <!-- surgeryDate -->
+    <ng-container matColumnDef="surgeryDate">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel('SurgeryCodeList') }}
+        {{ getColumnLabel('surgeryDate') }}
       </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        {{ element.SurgeryCodeList }}
+        {{ element.surgeryDate | date: 'yyyy-MM-dd' }}
       </mat-cell>
     </ng-container>
-  
+
+    <!-- drg -->
+    <ng-container matColumnDef="drg">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('drg') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.drg }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- surgeryName -->
+    <ng-container matColumnDef="surgerY_NAME">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('surgerY_NAME') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.surgerY_NAME }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- department -->
+    <ng-container matColumnDef="department">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('department') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.department }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- icd9 -->
+    <ng-container matColumnDef="icd9">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('icd9') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.icd9 }}
+      </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="keren">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('keren') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.keren }}
+      </mat-cell>
+    </ng-container>
+    <!-- surgeryRunk -->
+    <ng-container matColumnDef="surgeryRunk">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('surgeryRunk') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.surgeryRunk }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- diagCode -->
+    <ng-container matColumnDef="diagCode">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('diagCode') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.diagCode }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- secretaryDRG -->
+    <ng-container matColumnDef="secretaryDRG">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('secretaryDRG') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.secretaryDRG }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- surgeryCodeList -->
+    <ng-container matColumnDef="surgeryCodeList">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('surgeryCodeList') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.surgeryCodeList }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- registrarBillingRecommendation -->
+    <ng-container matColumnDef="registrarBillingRecommendation">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('registrarBillingRecommendation') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.registrarBillingRecommendation }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- registrarComments -->
+    <ng-container matColumnDef="registrarComments">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('registrarComments') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.registrarComments }}
+      </mat-cell>
+    </ng-container>
+
+    <!-- registrarRequestForReportCorrection -->
+    <ng-container matColumnDef="registrarRequestForReportCorrection">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel('registrarRequestForReportCorrection') }}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{ element.registrarRequestForReportCorrection }}
+      </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
     <mat-row
       *matRowDef="let row; columns: columns"
@@ -264,42 +269,12 @@
       (click)="openDetails(row)"
       matTooltip="לחץ לשם פרטי הניתוח">
     </mat-row>
-<!-- RegistrarBillingRecommendation -->
-<ng-container matColumnDef="RegistrarBillingRecommendation">
-  <mat-header-cell *matHeaderCellDef mat-sort-header>
-    {{ getColumnLabel('RegistrarBillingRecommendation') }}
-  </mat-header-cell>
-  <mat-cell *matCellDef="let element">
-    {{ element.RegistrarBillingRecommendation }}
-  </mat-cell>
-</ng-container>
-
-<!-- RegistrarComments -->
-<ng-container matColumnDef="RegistrarComments">
-  <mat-header-cell *matHeaderCellDef mat-sort-header>
-    {{ getColumnLabel('RegistrarComments') }}
-  </mat-header-cell>
-  <mat-cell *matCellDef="let element">
-    {{ element.RegistrarComments }}
-  </mat-cell>
-</ng-container>
-
-<!-- RegistrarRequestForReportCorrection -->
-<ng-container matColumnDef="RegistrarRequestForReportCorrection">
-  <mat-header-cell *matHeaderCellDef mat-sort-header>
-    {{ getColumnLabel('RegistrarRequestForReportCorrection') }}
-  </mat-header-cell>
-  <mat-cell *matCellDef="let element">
-    {{ element.RegistrarRequestForReportCorrection }}
-  </mat-cell>
-</ng-container>
-
-
-
   </mat-table>
+
   <mat-paginator
-  [length]="totalResults"
-  [pageSize]="filterForm.get('pageSize')?.value || 5"
-  [pageSizeOptions]="[10, 50, 100]"
-  showFirstLastButtons>
-</mat-paginator>
+    [length]="totalResults"
+    [pageSize]="filterForm.get('pageSize')?.value || 5"
+    [pageSizeOptions]="[10, 50, 100]"
+    showFirstLastButtons>
+  </mat-paginator>
+</div>
